--- a/index.html
+++ b/index.html
@@ -6,38 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light breadcrumb">
-    <a class="navbar-brand" href="#">Menu</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active" id="home_menu">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item" id="user_management_menu">
-          <a class="nav-link" href="#">User management</a>
-        </li>
-        <li class="nav-item" id="add_user_menu">
-          <a class="nav-link" href="#">Add user</a>
-        </li>
-
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
-  </nav>
-
   <div class="container background-color" id="user_management_panel">
     <div class="panel panel-primary col-md-10 ">
       <div class="panel-heading">
@@ -70,23 +43,23 @@
           <div class="row">
             <div class="col">
               <label for="">Full Name</label>
-              <input type="text" class="form-control" placeholder="input name" required name="fullname" >
+              <input type="text" class="form-control" placeholder="input name" required name="fullname">
             </div>
             <div class="form-group">
               <label for="">Address</label>
-              <input type="text" class="form-control" placeholder="input address" required name="address" >
+              <input type="text" class="form-control" placeholder="input address" required name="address">
             </div>
             <div class="form-group">
               <label for="">Age</label>
-              <input type="number" class="form-control" placeholder="input age" required name="age" >
+              <input type="number" class="form-control" placeholder="input age" required name="age">
             </div>
             <div class="form-group">
               <label for="">Email</label>
-              <input type="email" class="form-control" placeholder="input email" required name="email" >
+              <input type="email" class="form-control" placeholder="input email" required name="email">
             </div>
             <div class="form-group">
               <label for="">Phone number</label>
-              <input type="number" class="form-control" placeholder="input phonenumber" required name="phone_number" >
+              <input type="number" class="form-control" placeholder="input phonenumber" required name="phone_number">
             </div>
             <div class="form-group">
               <button type="button" class="btn-outline-success" id="add_user">Add user</button>
@@ -96,9 +69,10 @@
       </div>
     </div>
   </div>
-
-  <script type="text/javascript" src="jquery/jQuery-3.6.3.min.js"></script>
-  <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+  <!--Bootrap version v5-->
+  <script src="jquery/jQuery-3.6.3.min.js"></script>
+  <script src="jquery/popper.min.js"></script>
+  <script src="bootstrap/js/bootstrap.min.js"></script>
 
   <script type="text/javascript">
     $(document).ready(function () {
@@ -116,14 +90,14 @@
         $("#user_management_panel").hide();
         $("#add_user_panel").show();
       });
-    
-     $("#add_user").click(function () {
+
+      $("#add_user").click(function () {
         // alert("add user");
-        var fullname = $("[name=fullname]").val();
-        var address = $("[name=address]").val();
-        var age = $("[name=age]").val();
-        var email = $("[name=email]").val();
-        var phone_number = $("[name=phonenumber]").val();
+        let fullname = $('[name="fullname"]').val();
+        let address = $('[name="address"]').val();
+        let age = $('[name="age"]').val();
+        let email = $('[name="email"]').val();
+        let phone_number = $('[name="phonenumber"]').val();
         no++;
         $("#dataList").append("<tr>" +
           "<td>No</td>" +
@@ -136,8 +110,6 @@
       });
     });
   </script>
-
-
 </body>
 
 </html>
