--- a/index.html
+++ b/index.html
@@ -2,114 +2,132 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nav bar</title>
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+
+    <!-- Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+
+    <!--Style Css-->
+    <link rel="stylesheet" href="style.css">
+    <!-- Boxicons CSS -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <!-- spec compliant (includes chorme)-->
+    <!-- <meta name="mobile-web-app-capable" content="yes">
+    <link rel="shortcut icon" href="/a/favicon.ico?2018-07" type="image/x-icon">
+    <link rel="icon" sizes="192x192" href="/assets/image/">
+    <meta name="theme-color" content="#f6f5f4"> -->
+
 </head>
 
 <body>
-  <div class="container background-color" id="user_management_panel">
-    <div class="panel panel-primary col-md-10 ">
-      <div class="panel-heading">
-        User management
-      </div>
-      <div class="panel-body">
-        <table class="table ">
-          <thead>
-            <tr>
-              <td> No</td>
-              <td> Full Name</td>
-              <td> Address</td>
-              <td> Age</td>
-              <td> Email</td>
-              <td> Phone number</td>
-            </tr>
-          </thead>
-          <tbody id="dataList">
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
 
-  <div class="container" id="add_user_panel">
-    <div class="row">
-      <div class="col-md-6">
-        <form class="form" method="get" action="#add_user">
-          <h2>Add user</h2>
-          <div class="row">
-            <div class="col">
-              <label for="">Full Name</label>
-              <input type="text" class="form-control" placeholder="input name" required name="fullname">
-            </div>
-            <div class="form-group">
-              <label for="">Address</label>
-              <input type="text" class="form-control" placeholder="input address" required name="address">
-            </div>
-            <div class="form-group">
-              <label for="">Age</label>
-              <input type="number" class="form-control" placeholder="input age" required name="age">
-            </div>
-            <div class="form-group">
-              <label for="">Email</label>
-              <input type="email" class="form-control" placeholder="input email" required name="email">
-            </div>
-            <div class="form-group">
-              <label for="">Phone number</label>
-              <input type="number" class="form-control" placeholder="input phonenumber" required name="phone_number">
-            </div>
-            <div class="form-group">
-              <button type="button" class="btn-outline-success" id="add_user">Add user</button>
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <!--Bootrap version v5-->
-  <script src="jquery/jQuery-3.6.3.min.js"></script>
-  <script src="jquery/popper.min.js"></script>
-  <script src="bootstrap/js/bootstrap.min.js"></script>
+    <!--Navbar-->
+    <header class="header">
+        <nav class="navbar navbar-expand-lg header-nav fixed-top navbar-light bg-white ">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col justify-content-start bg-info">
+                        <a class="navbar-brand" href="#">
+                            <img src="/assets/image/output-onlinepngtools.png" alt="" width="80" height="60"
+                                class="d-inline-block align-text-top ">
+                        </a>
+                        <span></span>
+                        <span></span>
+                        <span></span>
 
-  <script type="text/javascript">
-    $(document).ready(function () {
-      var no = 1;
+                    </div>
 
-      $("#home_menu").click(function () {
-        $("#user_management_panel").show();
-        $("#add_user_panel").show();
-      });
-      $("#user_management_menu").click(function () {
-        $("#user_management_panel").show();
-        $("#add_user_panel").hide();
-      });
-      $("#add_user_menu").click(function () {
-        $("#user_management_panel").hide();
-        $("#add_user_panel").show();
-      });
+                    <div class="col justify-content-end">
+                        <div
+                            class="collapse navbar-collapse d-block flex-row-reverse align-items-center justify-content-end">
+                            <ul class="navbar-nav ml-auto mb-2 mb-lg-0 " style="background-color: brown;">
+                                <li class="nav-item ">
+                                    <a class="nav-item" href="#"><i class="fa-solid fa-cart-plus"></i>Wacthlist</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- <div class="container ">
+        <div class="row">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-center ">
+                <div class="col px-1 ">
+                    <a class="navbar-brand" href="#">
+                        <img src="/assets/image/output-onlinepngtools.png" alt="" width="80" height="60"
+                            class="d-inline-block align-text-top ">
+                    </a>
+                </div>
 
-      $("#add_user").click(function () {
-        // alert("add user");
-        let fullname = $('[name="fullname"]').val();
-        let address = $('[name="address"]').val();
-        let age = $('[name="age"]').val();
-        let email = $('[name="email"]').val();
-        let phone_number = $('[name="phonenumber"]').val();
-        no++;
-        $("#dataList").append("<tr>" +
-          "<td>No</td>" +
-          "<td>" + fullname + "</td>" +
-          "<td> " + address + "</td" > +
-          "<td> " + age + "</td>" +
-          "<td> " + email + "</td" > +
-          "<td> " + phonenumber + "</td>" +
-          "</tr>");
-      });
-    });
-  </script>
+                <div class="col-6 ">
+                    <div class="dropdown-menu"></div>
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Browse
+                    </button>
+                    <div class="dropdown-menu  justify-content-center" aria-labelledby="dropdownMenuButton1">
+                        <h5>Browse Marketplace</h5>
+                        <div class="col ">
+                            <a href="#">1</a>
+                            <br />
+                            <a href="#">1.1</a>
+                            <br />
+                            <a href="#">1.2</a>
+                            <br />
+                        </div>
+                        <div class="col">
+                            <a href="#">2</a>
+                            <br />
+                        </div>
+                        <div class="col">
+                            <a href="#">3</a>
+                            <br />
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col ">
+                    <div
+                        class="collapse navbar-collapse d-block flex-row-reverse align-items-center justify-content-end">
+                        <ul class="navbar-nav ms-auto mb-1 mb-lg-0 p-1 " style="background-color: brown;">
+                            <li class="nav-item ">
+                                <a class="nav-item" href="#"><i class="fa-solid fa-cart-plus"></i>Wacthlist</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-item" href="#"><i class="fa-regular fa-heart"></i>Favourites</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-item" href="#"><i class="fa-regular fa-pen"></i>Start a Listing</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-item" href="#"><i class="fa-light fa-circle-user"></i>My Trade Me</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </nav>
+        </div>
+
+    </div> -->
+
+    <!--Bootstrap version v5.0.2-->
+    <script src="jquery/jQuery-3.6.3.min.js"></script>
+    <script src="jquery/popper.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+
+    <!--script xu ly-->
+    <script src="app.js"></script>
+</body>
+</script>
 </body>
 
 </html>
