--- a/index.html
+++ b/index.html
@@ -29,95 +29,36 @@
 
     <!--Navbar-->
     <header class="header">
-        <nav class="navbar navbar-expand-lg header-nav fixed-top navbar-light bg-white ">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg header-nav fixed-top navbar-light bg-light ">
+            <div class="container">
                 <div class="row">
-                    <div class="col justify-content-start bg-info">
-                        <a class="navbar-brand" href="#">
-                            <img src="/assets/image/output-onlinepngtools.png" alt="" width="80" height="60"
-                                class="d-inline-block align-text-top ">
+                    <div class="col position-relative">
+                        <a class="navbar-brand" href="#" title="Trade Me- Life lives here">
+                            <img src="/assets/image/output-onlinepngtools.png"
+                                class="position-absolute top-50 start-0 translate-middle-y mx-auto " alt="Bootstrap">
                         </a>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
                     </div>
-
-                    <div class="col justify-content-end">
-                        <div
-                            class="collapse navbar-collapse d-block flex-row-reverse align-items-center justify-content-end">
-                            <ul class="navbar-nav ml-auto mb-2 mb-lg-0 " style="background-color: brown;">
-                                <li class="nav-item ">
-                                    <a class="nav-item" href="#"><i class="fa-solid fa-cart-plus"></i>Wacthlist</a>
-                                </li>
-                            </ul>
-                        </div>
+                </div>
+                <div class="col position-relative">
+                    <div class="collapse navbar-collapse justify-content-end mx-auto position-absolute top-50 end-0 translate-middle-y"
+                        id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item d">
+                                <a class="nav-item" href="#"><i class="fa-solid fa-cart-plus"></i>Wacthlist</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
-    <!-- <div class="container ">
-        <div class="row">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-center ">
-                <div class="col px-1 ">
-                    <a class="navbar-brand" href="#">
-                        <img src="/assets/image/output-onlinepngtools.png" alt="" width="80" height="60"
-                            class="d-inline-block align-text-top ">
-                    </a>
-                </div>
-
-                <div class="col-6 ">
-                    <div class="dropdown-menu"></div>
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Browse
-                    </button>
-                    <div class="dropdown-menu  justify-content-center" aria-labelledby="dropdownMenuButton1">
-                        <h5>Browse Marketplace</h5>
-                        <div class="col ">
-                            <a href="#">1</a>
-                            <br />
-                            <a href="#">1.1</a>
-                            <br />
-                            <a href="#">1.2</a>
-                            <br />
-                        </div>
-                        <div class="col">
-                            <a href="#">2</a>
-                            <br />
-                        </div>
-                        <div class="col">
-                            <a href="#">3</a>
-                            <br />
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col ">
-                    <div
-                        class="collapse navbar-collapse d-block flex-row-reverse align-items-center justify-content-end">
-                        <ul class="navbar-nav ms-auto mb-1 mb-lg-0 p-1 " style="background-color: brown;">
-                            <li class="nav-item ">
-                                <a class="nav-item" href="#"><i class="fa-solid fa-cart-plus"></i>Wacthlist</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-item" href="#"><i class="fa-regular fa-heart"></i>Favourites</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-item" href="#"><i class="fa-regular fa-pen"></i>Start a Listing</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-item" href="#"><i class="fa-light fa-circle-user"></i>My Trade Me</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-            </nav>
-        </div>
-
-    </div> -->
 
     <!--Bootstrap version v5.0.2-->
     <script src="jquery/jQuery-3.6.3.min.js"></script>
