thay doi ten A thanh a va long lai grid

--- a/index.html
+++ b/index.html
@@ -21,39 +21,38 @@
     <!-- <meta name="mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" href="/a/favicon.ico?2018-07" type="image/x-icon">
     <link rel="icon" sizes="192x192" href="/assets/image/">
-    <meta name="theme-color" content="#f6f5f4"> -->
+    
 
 </head>
 
 <body>
 
-    <!--Navbar-->
+    <--Navbar-->
     <header class="header">
-        <nav class="navbar navbar-expand-lg header-nav fixed-top navbar-light bg-light ">
-            <div class="container">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light ">
+            <div class="container bg-danger">
                 <div class="row">
-                    <div class="col position-relative">
-                        <a class="navbar-brand" href="#" title="Trade Me- Life lives here">
+                    <div class="col position-relative ">
+                        <a class="navbar-brand" href="javascript:void(0)" title="Trade Me- Life lives here">
                             <img src="/assets/image/output-onlinepngtools.png"
-                                class="position-absolute top-50 start-0 translate-middle-y mx-auto " alt="Bootstrap">
+                                class="position-absolute top-50 start-0 translate-middle-y mx-auto ">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span></span>
-                            <span></span>
-                            <span></span>
                         </button>
                     </div>
-                </div>
-                <div class="col position-relative">
-                    <div class="collapse navbar-collapse justify-content-end mx-auto position-absolute top-50 end-0 translate-middle-y"
-                        id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item d">
-                                <a class="nav-item" href="#"><i class="fa-solid fa-cart-plus"></i>Wacthlist</a>
-                            </li>
-                        </ul>
+
+                    <div class="col position-relative justify-content-end">
+                        <div class="collapse navbar-collapse  mx-auto position-absolute top-50 end-0 translate-middle-y"
+                            id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                <li class="nav-item ">
+                                    <a class="nav-item" href="#"><i class="fa-solid fa-cart-plus"></i>Wacthlist</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -67,8 +66,8 @@
 
     <!--script xu ly-->
     <script src="app.js"></script>
-</body>
-</script>
-</body>
+    </body>
+    </script>
+    </body>
 
 </html>
