Continue editing responsiveBar

--- a/index.html
+++ b/index.html
@@ -13,37 +13,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
     <!--Style Css-->
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!--icon browse tab-->
-    <link rel="shortcut icon" href="/">
+    <link rel="shortcut icon" href="./assets/image/bird.png">
 </head>
 
 <body class=" layout-top-nav skin-green">
 
     <!--Navbar-->
     <header class="header">
-        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light ">
+        <nav class="container navbar navbar-expand-md fixed-top navbar-light bg-light ">
             <div class="container bg-danger">
-                <div class="row ">
-                    <div class="col-sm-4 col-md-2 col-4 justify-content-start ">
+                <div class="row align-middle d-flex align-items-">
+                    <div class="col-sm-4 col-md-2 col-4 d-flex align-items-end flex-column  ">
                         <a class="navbar-brand" href="javascript:void(0)" title="Trade Me- Life lives here">
-                            <img src="./assets/image/output-onlinepngtools.png" class="logo ps-0 py-1 "
-                                style="width: 100px; ">
+                            <img src="./assets/image/clipart1855289.png" class="logo ps-0 py-1 w-100">
                         </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span></span>
-                        </button>
+
                     </div>
 
-                    <div class="col-sm-8 col-md-4 col-xs-8 justify-content-end position-relative">
+                    <div class="col-sm-8 col-md-4 col-xs-8 d-flex align-items-end flex-column bg-dark ">
                         <div class="box-top-menu">
-                            <ul
-                                class="navbar-nav ms-auto mb-2 mb-lg-0 position-absolute top-50 start-100 translate-middle">
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                                 <li class="nav-item ">
                                     <a class="nav-item" href="#"><i class="fa-solid fa-cart-plus"></i> WatchList</a>
                                 </li>
@@ -61,7 +55,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
 
     <!--script xu ly-->
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
 </body>
 </script>
 </body>
