--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <nav class=" navbar navbar-expand-md navbar-light bg-light ">
             <div class="container bg-danger py-1">
                 <div class="row h-100 align-items-center">
-                    <div class="col-3 col-lg-3 ">
+                    <div class="col-2 col-md-2 ">
                         <div class="row">
                             <div class="col">
                                 <a class="navbar-brand" href="javascript:void(0)" title="Trade Me- Life lives here">
                                     <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid">
                                 </a>
                             </div>
-                            <div class="col btn-group">
+                            <div class="col-2 btn-group">
                                 <button class="btn btn-secondary btn-sm dropdown-toggle" type="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     Small button
@@ -45,9 +45,9 @@
 
                     </div>
 
-                    <div class="col-5 offset-4 col-lg-5 offset-lg-4  text-center bg-body  pe-1">
-                        <div class=" nav d-flex flex-row m-auto gx-1 align-self-center">
-                            <ul class="navbar-nav d-flex me-auto  mb-lg-0 d-inline-flex">
+                    <div class="col-6 offset-4 col-md-6 offset-md-4 text-center bg-body ">
+                        <div class=" nav d-flex flex-column m-auto gx-1 align-items-center">
+                            <ul class="navbar-nav d-flex justify-content-around ">
                                 <li class="nav-item  flex-fill d-block ">
                                     <a class="nav-link active" aria-current="page" href="javascript:void(0)">
                                         <img src="./assets/icon/binoculars.svg" class="mh-100" width="16" height="16"
